...
              allowDownscaling={false}
              contentFit="cover"
              priority={"high"}
              transition={600}
              style={styles.image}
              placeholder={{ blurhash }}
              testID="bottom_sheet_image"
            />
          </View>
        )}
        <Spacer size={Spacing.l} />
        <ThemedText type="title" testID="bottom_sheet_title">
          {item?.node.structureDefinition.title}
        </ThemedText>
        <ThemedText testID="bottom_sheet_description">
          {stripHtml(item?.node.description)}
        </ThemedText>
      </ScrollView>
...
