...
  }, [isLoggingOut, iconColor, logout]);

  return (
    <PressableOpacity
      onPress={logout}
      disabled={isLoggingOut}
      testID="header_logout"
    >
      {renderIcon()}
    </PressableOpacity>
  );
};

...
