...
          onChangeText={setFormValue("password", setLoginValues)}
          secureTextEntry
          clearButtonMode="always"
          error={loginValues.password.error}
        />
        <Spacer />
        <ThemedButton onPress={login} testID="login_button" isLoading={loading}>
          {t("actions:login")}
        </ThemedButton>
        {hasError && (
          <ThemedText variant="warning">
            {t("errorMessages:loginFailed")}
          </ThemedText>
...
